dart/books/bodega/egamebook.css
/* @override 
	http://0.0.0.0:8000/egamebook.css
	http://egamebook.com/test/egamebook.css
	http://10.0.0.103:3030/Users/filiph/Programs/egamebook/dart/books/bodega/egamebook.css
*/

/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  margin: 0;
  padding: 0
}

article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
  display: block
}

body {
  line-height: 1
}

ol,ul {
  list-style: none
}

blockquote,q {
  quotes: none
}

blockquote:before,blockquote:after,q:before,q:after {
  content: none
}

table {
  border-collapse: collapse;
  border-spacing: 0
}

body {
  font-family: Garamond, Georgia, Palatino, serif;
  text-align: justify;
  line-height: 1.6em;
}

nav {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;

  background-color: #ffffff;
  background: -webkit-gradient(
	linear,
	left top,
	left bottom,
	color-stop(0.6, rgba(255, 255, 255, 1)),
    color-stop(1, rgba(256, 256, 256, 0))
  );
  background: -moz-linear-gradient( center top, rgba(255, 255, 255, 1) 60%, rgba(256, 256, 256, 0) 100% );
    background: gradient(
	linear,
	left top,
	left bottom,
	color-stop(0.6, rgba(255, 255, 255, 1)),
    color-stop(1, rgba(256, 256, 256, 0))
  );

  padding: 0.5em 1em 2em;
  z-index: 100;
}

nav a#book-restart {
	float: left;
}

nav div#right-hand-nav {
	float: right;
	width: 50%;
}

nav div#stats, nav a#points-button {
  float: right;
}

nav div#stats a {
  float: left;
  margin-right: 0.5em;
}

nav a#points-button {
  margin-left: 0.5em;
  font-weight: bold;
}

nav div#stats a span.stats-legend, nav a#points-button span.stats-legend {
  font-weight: normal;
  display: none;
}

nav a#points-button {
  border-color: gold;
}

nav a {
  cursor: pointer;
}

nav div#stats a.display-none {
  display: none;
}

.button {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f5f5f5), color-stop(1, #f1f1f1) );
	background:-moz-linear-gradient( center top, #ffffff 5%, #f6f6f6 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f1f1f1');
	background-color:#ffffff;
	-moz-border-radius:0.2em;
	-webkit-border-radius:0.2em;
	border-radius:0.2em;
	border:1px solid rgba(0,0,0,0.1);
	display:inline-block;
	color:#666666;
	font-family: 'Roboto', sans-serif;
	font-size:90%;
	font-weight:normal;
	padding:3px 9px;
	text-decoration:none;
	text-shadow:1px 1px 0px #ffffff;
}.button:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff) );
	background:-moz-linear-gradient( center top, #f6f6f6 5%, #ffffff 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff');
	background-color:#f6f6f6;
}
 /* This imageless css button was generated by CSSButtonGenerator.com */
/*.button:active {
	position:relative;
	top:1px;
}*/

div#book-title {
  background: white;
  width:100%;
  height:100%;
  z-index:1000;
  top:0;
  left:0;
  overflow: scroll;
  position: fixed;
}

div.bottom-fixed {
  position: fixed;
  height: 6em;
  bottom: 0;
  right: 0;
  left: 0;
  background: white;
}

div#book-about {
  display: none;
}

div.bottom-fixed > div {
  max-width: 40em;
  padding: 1em 1em 0;
  margin: 0 auto;
}

div.dialog {
  background: white;
  box-shadow: 0 0 0.5em 0.5em #ddd;
  position: fixed;
  z-index: 500;
  top: 20%;
  left: 50%;
  margin-left: -10em;
  width: 20em;
  max-height: 60%;
  overflow: scroll;
}

div.dialog > div {
  padding: 1em;
}

div.dialog h3 {
  margin-top: 0.5em;
}

div.dialog p {
  text-align: left;
    font: 90% 'Roboto', sans-serif;
}

button.menu-button {
  text-align: center;
  font-size: 120%;
  font-weight: bold;
  padding: 0.5em;
}

h1 {
  color: #000;
  margin: 0 0 0.5em;
  font: bold 250% 'Roboto', sans-serif;
  text-align: left;
}

h2 {
  margin: 1.5em 0 0;
  font: bold 150% 'Roboto', sans-serif;
}

h3 {
  margin: 1.5em 0 0;
  font: 120% 'Roboto', sans-serif;
}

div#book-wrapper {
  margin-top: 3.5em;
}

div#book-wrapper > * {
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  opacity: 1;
}

div#book-wrapper > *.hidden {
  opacity: 0;
}

p {
  margin: 1em 0;
}

p.meta {
  font: 90% 'Roboto', sans-serif;
  padding: 1em 2em;
  background: lightyellow;
 
  border-radius: 0.2em;
}

p.toast {
  font: 90% 'Roboto', sans-serif;
  text-align: center;
  margin-left: 10%;
  margin-right: 10%;
  padding: 0.5em 1em;
  -webkit-transition: color 5s;
  transition: color 5s;
  color: #999;

  border-radius: 0.2em;
}

p.toast.non-dimmed {
  color: inherit;
  /* TODO: make the transition work */
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

p img {
  max-width: 100%;
  margin: 2em 0;
}

div.wrapper {
  max-width: 40em;
  margin: 2em auto;
  padding: 1em 1em 3em;
}

div#book-whitespace-footer {
  height: 20em;
}

ol.choices-ol {
  font-family: 'Roboto', sans-serif;
  padding: 0;
  margin: 0;

  list-style: none;
  clear: both;
}

ol.bookmark {
  cursor: pointer;
}

ol.choices-ol.bookmark button {
  border: 1px solid rgba(0,180,0,0.5);
  cursor: pointer;
}

button {
  background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
  background:-moz-linear-gradient(center top, #f5f5f5 0%, #f1f1f1 100%);
  background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
  padding: 0.4em 1.5em;
  margin: 0.4em 0;
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 0.2em;
  text-align: left;
  cursor: pointer;
  display: block;
  width: 100%;
  font-size: 100%;
}

/*
ol.choices-ol button:active {
	position:relative;
	top:1px;
}
*/

ol.choices-ol.chosen button {
  cursor: default;
  background: white;
}

ol.choices-ol button.chosen {
  font-weight: bold;
}

ol.choices-ol button span.choice-number {
  display: block;
  width: 1.5em;
  float: left;
  text-align: right;
}

ol.choices-ol button span.choice-display {
  display: block;
  padding-left: 2.5em;
}

ol.choices-ol button span.choice-text {
  display: block;
}

ol.choices-ol button p {
  margin: 0;
  padding: 0;
}

ol.choices-ol button span.choice-infochips {
  font-size: 90%;
  float: right;
  max-width: 70%;
}

ol.choices-ol button span.choice-infochip {
  display: inline-block;
  background: rgba(255, 255, 255, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0 0.4em;
  border-radius: 0.2em;
  margin-left: 2em;
}

.blink {
  animation: highlight 1s;
  -moz-animation: highlight 1s;
  -webkit-animation: highlight 1s;
  -o-animation: highlight 1s;
}

@keyframes highlight {
  0%    {box-shadow: none;}
  10%   {box-shadow: 0 0 0.5em 0.5em lightblue;}
  100%  {box-shadow: none;}
}

@-webkit-keyframes highlight {
  0%    {-webkit-box-shadow: none;}
  10%   {-webkit-box-shadow: 0 0 0.5em 0.5em lightblue;}
  100%  {-webkit-box-shadow: none;}
}

@-moz-keyframes highlight 
  0%    {-moz-box-shadow: none;}
  10%   {-moz-box-shadow: 0 0 0.5em 0.5em lightblue;}
  100%  {-moz-box-shadow: none;}
}

@-o-keyframes highlight 
  0%    {-o-box-shadow: none;}
  10%   {-o-box-shadow: 0 0 0.5em 0.5em lightblue;}
  100%  {-o-box-shadow: none;}
}

